Can't use Web Inspector on web views made by TestWebKitAPI https://bugs.webkit.org/show_bug.cgi?id=147073 <rdar://problem/76708379>

Reviewed by Devin Rousso.

It is necessary to spin a nested run loop at the point in the test where you would
like to remote inspect a WebView. Messages from the remote connection are dispatched
through UIProcess, so if lldb has paused UIProcess, WebInspectorUI will not be able to
get any data from the inspected WebView.

* TestWebKitAPI/DebugUtilities.h: Added.
Add macros to wait for a remote inspector to attach or detach, then drop into
the debugger when it has done so.

* TestWebKitAPI/PlatformUtilities.h: Add missing `#pragma once`.
* TestWebKitAPI/WTFStringUtilities.h: Force the build to fail noisily if we have
attempted to redefine WTF_STRINGTYPEADAPTER_COPIED_WTF_STRING. Force the correct
ordering between "WTFStringUtilities.h" and <wtf/text/StringConcatenate.h>.

Canonical link: https://commits.webkit.org/236758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276276 268f45cc-cd09-0410-ab3c-d52691b4dbfc